membership and contacts

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ title: Kneipverein Friedberg e. V.
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-news" role="tabpanel" aria-labelledby="pills-news-tab">{% include news_section.html %}</div>
-            <div class="tab-pane fade" id="pills-board" role="tabpanel" aria-labelledby="pills-board-tab">{% include board_section.html %}</div>
-            <div class="tab-pane fade" id="pills-trainers" role="tabpanel" aria-labelledby="pills-trainers-tab">{% include trainers_section.html %}</div>
-            <div class="tab-pane fade" id="pills-membership" role="tabpanel" aria-labelledby="pills-membership-tab">[MEMBERSHIP]</div>
-            <div class="tab-pane fade" id="pills-statute" role="tabpanel" aria-labelledby="pills-statute-tab">[STATUTE]</div>
-            <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">[LINKS]</div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">[CONTACT]</div>
+            <div class="tab-pane fade show active" id="pills-news" role="tabpanel" style="padding:30px;" aria-labelledby="pills-news-tab">{% include news_section.html %}</div>
+            <div class="tab-pane fade" id="pills-board" role="tabpanel" style="padding:30px;" aria-labelledby="pills-board-tab">{% include board_section.html %}</div>
+            <div class="tab-pane fade" id="pills-trainers" role="tabpanel" style="padding:30px;" aria-labelledby="pills-trainers-tab">{% include trainers_section.html %}</div>
+            <div class="tab-pane fade" id="pills-membership" role="tabpanel" style="padding:30px;" aria-labelledby="pills-membership-tab">{% include membership_section.html %}</div>
+            <div class="tab-pane fade" id="pills-statute" role="tabpanel" style="padding:30px;" aria-labelledby="pills-statute-tab">{% include statute_section.html %}</div>
+            <div class="tab-pane fade" id="pills-links" role="tabpanel" style="padding:30px;" aria-labelledby="pills-links-tab">{% include links_section.html %}</div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" style="padding:30px;" aria-labelledby="pills-contact-tab">{% include contact_section.html %}</div>
         </div>
 
     </div>
