Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Kneipverein Friedberg e. V.
             <center>
                 <img src="/assets/images/logo.svg" alt="" class="centered">
             </center>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis reprehenderit placeat, quod voluptatibus tenetur fuga omnis error numquam culpa quasi vel iusto nisi facilis consectetur minus quia corporis voluptatem cum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis reprehenderit placeat, quod voluptatibus tenetur fuga omnis error numquam culpa quasi vel iusto nisi facilis consectetur minus quia corporis voluptatem cum. test test test</p>
 
 
         </div>
