--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: Kneipverein Friedberg e. V.
 ---
 
 
-    <div class="container" style="max-width: 800px;">
+    <div class="container" style="max-width: 1000px;">
         <div class="row text-center mt-5">
             <center>
                 <img src="/assets/images/logo.svg" alt="" class="centered">
             </center>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis reprehenderit placeat, quod voluptatibus tenetur fuga omnis error numquam culpa quasi vel iusto nisi facilis consectetur minus quia corporis voluptatem cum. test test test</p>
+            <p>Herzlich Willkommen auf der Webseite des Kneipp Vereins Friedberg in Bayern!</p><p>Wir freuen uns, dass Sie unsere Homepage gefunden haben. Wir setzen uns für die <b>Förderung einer gesunden Lebensweise und einer ganzheitlichen Gesundheitsförderung</b> ein. Dabei stehen die Lehren von Sebastian Kneipp im Mittelpunkt unserer Arbeit.</p><p>Wir laden Sie ein, sich auf unserer Webseite umzuschauen.</p>
 
 
         </div>
@@ -24,7 +24,7 @@ title: Kneipverein Friedberg e. V.
                 <button class="nav-link" id="pills-board-tab" data-bs-toggle="pill" data-bs-target="#pills-board" type="button" role="tab" aria-controls="pills-board" aria-selected="false">Vorstand</button>
             </li>
             <li class="nav-item" role="presentation" style="margin: auto">
-                <button class="nav-link" id="pills-trainers-tab" data-bs-toggle="pill" data-bs-target="#pills-trainers" type="button" role="tab" aria-controls="pills-trainers" aria-selected="false">Übungsleiter</button>
+                <button class="nav-link" id="pills-trainers-tab" data-bs-toggle="pill" data-bs-target="#pills-trainers" type="button" role="tab" aria-controls="pills-trainers" aria-selected="false">Übungsleiter & Kurse</button>
             </li>
             <li class="nav-item" role="presentation" style="margin: auto">
                 <button class="nav-link" id="pills-membership-tab" data-bs-toggle="pill" data-bs-target="#pills-membership" type="button" role="tab" aria-controls="pills-membership" aria-selected="false">Mitgliedschaft</button>
