--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Kneipverein Friedberg e. V.
 ---
 
 
-    <div class="container" style="max-width: 1000px;">
+    <div class="container" style="max-width: 1400px;">
         <div class="row text-center mt-5">
             <center>
                 <img src="/assets/images/logo.svg" alt="" class="centered">
@@ -15,7 +15,7 @@ title: Kneipverein Friedberg e. V.
         </div>
     </div>
 
-    <div class="container mt-5" style="max-width: 1600px;">
+    <div class="container mt-5" style="max-width: 1700px;">
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation" style="margin: auto">
                 <button class="nav-link active" id="pills-news-tab" data-bs-toggle="pill" data-bs-target="#pills-news" type="button" role="tab" aria-controls="pills-news" aria-selected="true">Aktuelles</button>
@@ -40,13 +40,13 @@ title: Kneipverein Friedberg e. V.
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-news" role="tabpanel" style="padding:30px;" aria-labelledby="pills-news-tab">{% include news_section.html %}</div>
-            <div class="tab-pane fade" id="pills-board" role="tabpanel" style="padding:30px;" aria-labelledby="pills-board-tab">{% include board_section.html %}</div>
-            <div class="tab-pane fade" id="pills-courses" role="tabpanel" style="padding:30px;" aria-labelledby="pills-courses-tab">{% include courses_section.html %}</div>
-            <div class="tab-pane fade" id="pills-membership" role="tabpanel" style="padding:30px;" aria-labelledby="pills-membership-tab">{% include membership_section.html %}</div>
-            <div class="tab-pane fade" id="pills-statute" role="tabpanel" style="padding:30px;" aria-labelledby="pills-statute-tab">{% include statute_section.html %}</div>
-            <div class="tab-pane fade" id="pills-links" role="tabpanel" style="padding:30px;" aria-labelledby="pills-links-tab">{% include links_section.html %}</div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" style="padding:30px;" aria-labelledby="pills-contact-tab">{% include contact_section.html %}</div>
+            <div class="tab-pane fade show active" id="pills-news" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-news-tab">{% include news_section.html %}</div>
+            <div class="tab-pane fade" id="pills-board" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-board-tab">{% include board_section_alt.html %}</div>
+            <div class="tab-pane fade" id="pills-courses" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-courses-tab">{% include courses_section.html %}</div>
+            <div class="tab-pane fade" id="pills-membership" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-membership-tab">{% include membership_section.html %}</div>
+            <div class="tab-pane fade" id="pills-statute" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-statute-tab">{% include statute_section.html %}</div>
+            <div class="tab-pane fade" id="pills-links" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-links-tab">{% include links_section.html %}</div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" style="padding-top:30px;" aria-labelledby="pills-contact-tab">{% include contact_section.html %}</div>
         </div>
 
     </div>
